# EventWarping

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: apnea.ipynb
respiratory_analysis/: apnea_classification.py  main.py  make_plots.py  misc.py  warping.py
src/: hmm.py
src/eventwarping/: constraints.py  eventseries.py  formats.py  timeseries.py  window.py
tests/: apnea_evaluation.py  bic_10_components_class_0.pkl  bic_10_components_class_1.pkl  bic_10_components_class_2.pkl  bic_20_components_class_0.pkl  bic_20_components_class_1.pkl  bic_20_components_class_2.pkl  bic_30_components_class_0.pkl  bic_30_components_class_1.pkl  bic_30_components_class_2.pkl  bic_40_components_class_0.pkl  bic_40_components_class_1.pkl  bic_40_components_class_2.pkl  bic_50_components_class_0.pkl  bic_50_components_class_1.pkl  bic_50_components_class_2.pkl  bic_60_components_class_0.pkl  bic_60_components_class_1.pkl  bic_60_components_class_2.pkl  bic_70_components_class_1.pkl  bic_70_components_class_2.pkl  draft_file_dries.py  test_apnea.py  test_examples.py  test_likelihood.py  test_transienttimeseries.py
tests/rsrc/: cnn_classification.py  example1.txt  example3.txt  example4.txt  example5.txt  example6.txt  example7.txt  example8.txt  example9.txt  example9_aligned.txt  example9_intermediate.txt  example_inertia.txt
