[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eventwarping"
version = "0.1.0"
authors = [
    { name="Wannes Meert", email="wannes.meert@kuleuven.be" },
    {name="Dries Van der Plas", email="dries.vanderplas@kuleuven.be"},
]
description = "Align event streams"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy", "scipy"]

[project.urls]
"Homepage" = "https://github.com/wannesm/eventwarping"

[project.optional-dependencies]
tests = [
  'pytest',
  'pytest-env',
  'pytest-benchmark[histogram]>=3.2.1',
  'matplotlib'
]
